--- a/src/app/components/consultapedidos/consultapedidos.component.html
+++ b/src/app/components/consultapedidos/consultapedidos.component.html
@@ -37,8 +37,9 @@
                       required
                     >
                   </div>
-                  <div class="form-group col-md-6">
-                      <button hidden="{{ bCliente }}"  type="submit" class="btn btn-primary">CATALOGO DE CLIENTES</button>
+                  <div class="form-group col-md-3" [hidden]="bCliente">
+                      <label class="CamposFonelli">-</label>
+                      <button type="submit" class="form-control btnFonelli">CATALOGO DE CLIENTES</button>
                   </div>
 
 
@@ -177,13 +178,13 @@
 
 
     <!--Modal pedidos detalle-->
-    <ng-template #PedidoDetalle let-modal>
-      <div class="modal-header">
-        
+    <ng-template #PedidoDetalle let-modal >
+      <div class="modal-header" >        
         <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
       </div>
-      <form #formLoginDistribuidor="ngForm" >
-      <div class="modal-body-tables">
+      
+  
+      <div class="modal-body-tables" style="overflow-y: scroll;" >
   
           <div class="container">
               <div class="row">
@@ -201,8 +202,8 @@
                   </div>
                 </div> 
 
-                    <div class="col-12" class="table-responsive">                     
-                      <table *ngIf="bBanderaDet"  class="table table-striped">
+                    <div class="col-12" >                     
+                      <table *ngIf="bBanderaDet" class="table table-striped">
                         <thead>
                         <tr class="EncTabla">
                           <th>#</th>
@@ -211,13 +212,13 @@
                           <th scope="col" style="text-align:left">S</th>
                           <th scope="col" style="text-align:left">CAT</th>
                           <th scope="col" style="text-align:left">SCAT</th>
-                          <th scope="col" style="text-align:left">FECHA PED</th>
+                          <th scope="col" style="text-align:center;"><div class="size">FECHA PED</div></th>
                           <th scope="col" style="text-align:right">PEDIDO</th>
-                          <th scope="col" style="text-align:left">FEC SUR</th>
+                          <th scope="col" style="text-align:center"><div class="size">FEC SUR</div></th>
                           <th scope="col" style="text-align:right">SURTIDO</th>
                           <th scope="col" style="text-align:left">SERIE</th>
                           <th scope="col" style="text-align:left">DOCTO</th>
-                          <th scope="col" style="text-align:left">FEC TER</th>
+                          <th scope="col" style="text-align:center"><div class="size">FEC TER</div></th>
                           <th scope="col" style="text-align:left">DESCRIPCIÓN</th>
                           <th scope="col" style="text-align:right">CP4</th>
                           <th scope="col" style="text-align:right">CP45</th>
@@ -292,12 +293,12 @@
                           <th scope="col" style="text-align:left">S</th>
                           <th scope="col" style="text-align:left">CAT</th>
                           <th scope="col" style="text-align:left">SCAT</th>
-                          <th scope="col" style="text-align:left">FECHA PED</th>
+                          <th scope="col" style="text-align:center"><div class="size">FECHA PED</div></th>
                           <th scope="col" style="text-align:right">PEDIDO</th>
                           <th scope="col" style="text-align:right">A PRODUCIR</th>
                           <th scope="col" style="text-align:right">PRODUCIDO</th>
                           <th scope="col" style="text-align:right">DIFEREN</th>
-                          <th scope="col" style="text-align:left">FEC PROD</th>                          
+                          <th scope="col" style="text-align:center"><div class="size">FEC PROD</div></th>                          
                         </tr>
                         </thead>
                         <tbody>
@@ -333,7 +334,7 @@
         <!-- <button type="submit" class="btn btn-primary" [disabled]="!formLoginDistribuidor.form.valid">INGRESAR</button> -->
         
       </div>
-    </form>
+  
   </ng-template> 
   
 
