--- a/src/app/components/consultaprecios/consultaprecios.component.html
+++ b/src/app/components/consultaprecios/consultaprecios.component.html
@@ -25,6 +25,7 @@
                       </div>
                       <div class="form-group col-md-3">
                         <label class="CamposFonelli">Filial</label>
+                        
                         <input
                           type="text" 
                           id="idFilPre"
@@ -35,13 +36,16 @@
                           disabled="{{ bCliente }}"
                           required
                         >
+                        
                       </div>
                       <div class="form-group col-md-3">
+                        <label class="CamposFonelli">-</label>
                           <button 
                             type="submit"
-                             class="btn btn-primary"
-                             hidden="{{ bCliente }}"
-                             >CATALOGO DE CLIENTES</button>
+                             class="form-control btnFonelli"
+                             [hidden]="bCliente"
+                             >CATALOGO DE CLIENTES
+                          </button>
                       </div>
 
 
@@ -63,21 +67,20 @@
                           
                         </select>
                       </div>
-                      <div class="form-group col-md-3">
-                        <label  hidden="{{ bCliente }}">-</label>
-                        <input type="text" class="form-control" id="" placeholder=""  hidden="{{ bCliente }}">
+                      <div class="form-group col-md-3" [hidden]="bCliente">
+                        <label class="CamposFonelli">-</label>
+                        <input type="text" class="form-control" id="" placeholder="" >
                       </div>
                   </div>
 
-                  <div class="form-row">
+                  <div class="form-row" [hidden]="bCliente">
                       <div class="form-group col-md-3">
-                        <label class="CamposFonelli" hidden="{{ bCliente }}">Tipo de paridad</label>
+                        <label class="CamposFonelli">Tipo de paridad</label>
                         <select 
                           class="form-select"
                           name="idParidadPre"
                           #nombre="ngModel"
                           [(ngModel)]="oBuscar.ParidadTipo"
-                          hidden="{{ bCliente }}"
                           required
                         >
                           <option value="Normal">Normal</option>
