--- a/src/app/components/estadocuenta/estadocuenta.component.html
+++ b/src/app/components/estadocuenta/estadocuenta.component.html
@@ -43,7 +43,7 @@
                         
                     </div>
   
-                    <div class="form-row" hidden="{{ bCliente }}" >
+                    <div class="form-row" [hidden]="bCliente" >
                         <div class="form-group col-md-3">
                           <label class="CamposFonelli">Hasta cliente</label>
                           <input 
@@ -75,8 +75,8 @@
                   
   
                     <div class="form-row">
-                        <div class="form-group col-md-3">
-                          <label  hidden="{{ bCliente }}">Desde cartera</label>
+                        <div class="form-group col-md-3" [hidden]="bCliente">
+                          <label >Desde cartera</label>
                           <input 
                             type="text" 
                             id="idDesCar"
@@ -84,12 +84,11 @@
                             name="idDesCar"
                             #nombre="ngModel"
                             [(ngModel)]="oBuscar.CarteraDesde"
-                            hidden="{{ bCliente }}"
                             required
                           >
                         </div>
-                        <div class="form-group col-md-3">
-                          <label  hidden="{{ bCliente }}">Hasta cartera</label>
+                        <div class="form-group col-md-3" [hidden]="bCliente">
+                          <label >Hasta cartera</label>
                           <input 
                             type="text" 
                             id="idHasCar"
@@ -97,7 +96,6 @@
                             name="idHasCar"
                             #nombre="ngModel"
                             [(ngModel)]="oBuscar.CarteraHasta"
-                            hidden="{{ bCliente }}"
                             required
                           >
                         </div>
@@ -111,8 +109,8 @@
                         <div class="form-group col-md-3">
                             <button type="submit" (click)="consultaEstadoCuenta()" class="btnFonelli btn"> <span *ngIf="bCargando" class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="color:#183e6f"> </span> BUSCAR</button>
                         </div>
-                        <div class="form-group col-md-3">
-                          <button hidden="{{ bCliente }}" type="submit"  class="btnFonelli btn">CATALOGO DE CLIENTES</button>
+                        <div class="form-group col-md-3" [hidden]="bCliente">
+                          <button type="submit"  class="btnFonelli btn">CATALOGO DE CLIENTES</button>
                       </div>
                     </div>  
                     
