--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -58,7 +58,7 @@
                     <li class="nav-item">
                         <!--<a class="nav-link" href="#news">News & Events</a>-->
                         <!-- <a class="nav-link" href ="#" (click)="openEjecutivo(LoginEjecutivos)">Asesores comerciales</a> -->
-                        <a class="nav-link" href ="http://www.fonelli.devandtest.net/login.php" target="_blank">Asesores comerciales</a>
+                        <a class="nav-link" href="javascript:void(0);"(click)="openEjecutivo(LoginEjecutivos)">Asesores comerciales</a>
                     </li>
 
                     <li class="nav-item">
@@ -152,55 +152,90 @@
 
 
   <!--Modal login ejecutivos de venta-->
-  <ng-template #LoginEjecutivos let-modal>
-      
-    <div class="modal-header">
-      <h4 class="modal-title" id="LoginEjecutivos"></h4>
-      <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
-    </div>
+  <ng-template #LoginEjecutivos let-modal>      
+    <section class="h-100">
+        <div class="container h-100">
+            <div class="row justify-content-md-center h-100">
+                <div class="card-wrapper">
+    
+                    <div class="modal-header">
+                       <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>                                           
+                    </div>
 
-    <form #formLoginEjecutivo="ngForm" (ngSubmit)="onSubmitLEjecutivo(formLoginEjecutivo)">
-    <div class="modal-body">
-      
-        <div class="container">
-            <div class="row">
+                        <div class="card fat">
+                            <div class="card-body">
 
-            <div class="col-12 ">
-                
-                <img src="../../../assets/images/principal/ejecutivo_ventas.png" class="img-fluid large-news-image news-image" alt="" >
-                <!-- <h4>BIENVENIDO</h4> -->
-              </div>
-         
-  
-            <label for="usuario">Usuario</label><br/>
-             <input type ="text" name ="usuario" #codigo="ngModel" [(ngModel)]="ModeloLoginEjecutivo.codigo" required/>
-             <span *ngIf="codigo.touched && !codigo.valid"> El usuario es obligatorio</span> <br/>
+                                <form #formLoginEjecutivo="ngForm" >
+                                    
+                                    <div class="col-12 ">                
+                                        <img src="../../../assets/images/principal/ejecutivo_ventas.png" class="img-fluid large-news-image news-image" alt="" >
+                                        <!-- <h4>BIENVENIDO</h4> -->
+                                    </div>    
 
-             <label for="puesto">Puesto</label><br/>
-             <select name="puesto" #puesto="ngModel" [(ngModel)]="ModeloLoginEjecutivo.puesto" required>
-             <option value="Agente">Agente</option>
-             <option value="Gerente">Gerente</option>
-           </select>
-           <span *ngIf="puesto.touched && !puesto.valid"> El puesto es obligatorio</span> <br/>
-           
+                                    <div class="form-group">
+                                        <label for="usuario" class="CamposFonelli">Usuario</label><br/>
+                                            <input 
+                                                class="form-control" 
+                                                type ="text" 
+                                                name ="usuario" 
+                                                #codigo="ngModel" 
+                                                [(ngModel)]="ModeloLoginEjecutivo.codigo" 
+                                                required
+                                            />
+                                        <span *ngIf="codigo.touched && !codigo.valid" style="color:#e8b4c1"> El usuario es obligatorio</span> <br/>
+                                    </div>
 
-             <label for="password"  >Contraseña</label><br/>
-             <input type ="password" name ="password" #password="ngModel" [(ngModel)]="ModeloLoginEjecutivo.password" required/>
-             <span *ngIf="password.touched && !password.valid"> El password es obligatorio</span> <br/>            
-        
-        </div> 
-    </div>    
-    </div>
+                                    <div class="form-group">
+                                        <label for="puesto" class="CamposFonelli">Puesto</label><br/>
+                                        <select 
+                                            class="form-control" 
+                                            name="puesto" 
+                                            #puesto="ngModel" 
+                                            [(ngModel)]="ModeloLoginEjecutivo.puesto" 
+                                            required>
+                                        <option value="Agente">Agente</option>
+                                        <option value="Gerente">Gerente</option>
+                                    </select>
+                                    <span *ngIf="puesto.touched && !puesto.valid" style="color:#e8b4c1"> El puesto es obligatorio</span> <br/>
+                                    </div>
 
-    <div *ngIf="alerLoginEjecutivo">
-      <p class="alert alert-danger" role="alert">{{respuestaLoginEjecutivo}}</p>
-    </div>
+                                    <div class="form-group">
+                                        <label for="password"  class="CamposFonelli">Contraseña</label><br/>
+                                        <input 
+                                            class="form-control" 
+                                            type ="password" 
+                                            name ="password" 
+                                            #password="ngModel" 
+                                            [(ngModel)]="ModeloLoginEjecutivo.password" 
+                                            required
+                                            />
+                                        <span *ngIf="password.touched && !password.valid" style="color:#e8b4c1"> El password es obligatorio</span> <br/>            
+                                    </div>   
+                                    
+                                    <div *ngIf="alerLoginEjecutivo">
+                                        <p class="alert alert-danger" role="alert">{{respuestaLoginEjecutivo}}</p>
+                                    </div>
 
-    <div class="modal-footer">
-         <button type="submit" class="btn btn-outline-dark" [disabled]="!formLoginEjecutivo.form.valid" (click)="ConsultarLEjecutivo()">Ingresar</button>
-    </div>
-  </form>
-  </ng-template> 
+                                    <div class="form-group m-0">
+                                        <button type="submit" class="btn btn-block" style="background-color:#24a4cc; color: white;" [disabled]="!formLoginEjecutivo.form.valid" (click)="ConsultarLEjecutivo()"><span *ngIf="bCargandoEmpleados" class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="color:#e8b4c1"></span>INGRESAR</button>
+                                    </div>
+
+                                <!-- <div class="modal-footer">
+                                    <button type="submit" class="btn btn-outline-dark" [disabled]="!formLoginEjecutivo.form.valid" (click)="ConsultarLEjecutivo()">Ingresar</button>
+                                </div> -->
+                                </form>
+                            </div>
+                        </div>
+
+                        <div class="footer">
+                            <br>
+                        </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+</ng-template> 
 
    <!--Modal Contacto-->
    <ng-template #Contacto let-modal>
